# Tchangos

./: .gitignore  Dockerfile  Helper.py  README.md  bot.py  docker.sh  gen_tag.sh  live_music.py  pyproject.toml  pyvenv.cfg  requirements.txt  twitch_helper.py
locale/en/: ai_chat.ftl  bot.ftl  live_partners.ftl
locale/pt/: bot.ftl  generic_guild_manager.ftl  live_partners.ftl
tchangos/data/: flags.json
tchangos/locale/en/: ai_chat.ftl  generic.ftl  generic_guild_manager.ftl  generic_translate.ftl
tchangos/locale/pt/: ai_chat.ftl  generic.ftl  live_partners.ftl
tchangos/locale/pt_br/: ai_chat.ftl  generic_translate.ftl
tchangos/src/: bot.py  constants.py  error_list.py  helper.py  main.py
tchangos/src/cogs/ai/: chat.py
tchangos/src/cogs/gamble/: ft1.py  gamble_general.py  gamble_helper.py  gamble_trades.py  rand.py
tchangos/src/cogs/generic/: generic.py  guild_manager.py  translate.py
tchangos/src/cogs/live/: action.py  generic_live_info.py  partners.py
tchangos/src/data/: streamers.json
tchangos/src/mongo/collections/schemas/: partners_schema.py
tchangos/src/mongo/collections/services/: partners_service.py
tchangos/src/mongo/config/: DBConnectionHandler.py
