[tool.poetry]
name = "bb1nho-bot"
version = "0.1.0"
description = ""
authors = ["iwametal <od.leonardo01@gmail.com>"]
readme = "README.md"
packages = [{include = "bb1nho_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
google-generativeai = "^0.8.5"
jishaku = "^2.6.0"
twitchapi = "^4.5.0"


[tool.poetry.group.env.dependencies]
configparser = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
