[tool.poetry]
name = "Tchangos"
version = "0.1.11"
description = ""
authors = ["iwametal <od.leonardo01@gmail.com>"]
readme = "README.md"
# packages = [{include = "Tchangos"}]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
google-generativeai = "^0.8.5"
jishaku = "^2.6.0"
twitchapi = "^4.5.0"
pydantic = "^2.11.7"


[tool.poetry.group.env.dependencies]
configparser = "^7.2.0"


[tool.poetry.group.language.dependencies]
googletrans = "^4.0.2"
fluent-runtime = "^0.4.0"


[tool.poetry.group.database.dependencies]
pymongo = {extras = ["srv"], version = "^4.13.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
